# PINNACLE

./: .gitignore  README.md  analysis.ipynb  main.py  nexPinnacle.py  pinnacle.py  pyproject.toml  run_base_training.sh
Misc/: ALPinnacleLBFGS.ipynb  dimension_group_analysis.ipynb  nexPinnacle.py  non_dim_tests.ipynb  pdm.ipynb  pinnacle.py  run.bat  sweep.py
conf/: config.yaml
pinnacle/: ALPinnacle.ipynb  ALPinnacleLBFGS.ipynb  ENGDPinnacle.ipynb  NTK+ALPinnacle.ipynb  NTKPinnacle.ipynb  NTKPinnacleLog.ipynb  Nibi.bat  Test_Pinnacle.ipynb  Yemba.bat  analysis.py  analyze.py  generate_sensitivity_plots.py  gradients.py  losses.py  main.py  modular+notebook_sweep.py  networks.py  ofaimplementation.ipynb  physics.py  pinnacle.ipynb  sampling.py  sensitivity_analysis.py  submit_sensitivity.sh  sweep.py  training.py  weighting.py
scripts/: aggregate_revision_results.py  chain_followup.sh  compute_e3a_wholecurve.py  compute_table1.py  diag_inverse_grad.py  docker_smoke_test.sh  docker_test_install.sh  docker_train.sh  make_e2_figure.py  make_e4e5_figures.py  make_hybrid_robustness_fig.py  make_inverse_fig.py  post_w7_launch.sh  probe_checkpoints.sh  probe_fem_order.sh  recompute_revision_errors.py  run_all_v2.sh  run_all_v2_resume.sh  run_all_v2_resume_full_gpu.sh  run_base_training.sh  run_e1.sh  run_e1_brdr.sh  run_e1_v2.sh  run_e2.sh  run_e3.sh  run_e3_v2.sh  run_e3b_positions.sh  run_e4.sh  run_e4_v2.sh  run_e4e5_fixed.sh  run_e4e5_parallel.sh  run_e5.sh  run_e5_n10.sh  run_e5_v2.sh  run_e6.sh  run_e6_recovery.sh  run_e6_v2.sh  run_e7.sh  run_inference_e3e4e5.py  (+13 more)
(+21 files in other folders)
